2004-07-13  Alexander V. Lukyanov <lav@yars.free.net>

	* SFtp.cc, SFtp.h: implemented slow start; handle passphrase prompt;
	  print in debug wire path.
	* ftpclass.cc: proxy with combined auth supported.
	* resource.cc: new setting ftp:proxy-auth-joined; change
	  sftp:max-packets-in-flight to 16.

2004-07-08  Alexander V. Lukyanov <lav@yars.free.net>

	* commands.cc: remove redundant output default.
	* FindJobDu.cc: set show_sl properly.

2004-06-12  Alexander V. Lukyanov <lav@yars.free.net>

	* StatusLine.cc: (ShowN) show status line immediately if update_timer
	  stopped.

2004-06-10  Alexander V. Lukyanov <lav@yars.free.net>

	* ArgV.h, CharReader.cc, echoJob.h: use trio.h
	* ftpclass.cc: apply ftp:port-range to passive connection too; increase
	  minimum amount of data to upload before retry counter is reset.

2004-06-07  Alexander V. Lukyanov <lav@yars.free.net>

	* complete.cc: complete `bm:' urls.
	* misc.cc: fix url_file with file[0]=='~'.
	* url.cc: unquote host name in valid_bm; don't re-check bm validity
	  after lookup.

2004-06-02  Marc Bevand <marc.bevand@smartjog.com>

	* FindJobDu.cc: use long long to hold file size.

2004-06-01  Alexander V. Lukyanov <lav@yars.free.net>

	* commands.cc: save old directory when no cd verification is done.

2004-05-31  Alexander V. Lukyanov <lav@yars.free.net>

	* ftpclass.cc: set copy_failed in NoFileCheck and TransferCheck on 4xx codes;
	  do CPSV only when copy_tls_connect is set.
	* FileCopyFtp.cc: fix compilation without ssl.

2004-05-28  Alexander V. Lukyanov <lav@yars.free.net>

	* ftpclass.cc: retry FEAT after login on 503 (invalid sequence of commands).
	* Resolver.cc: fill sa_len if present.
	* Http.cc, NetAccess.cc, ResMgr.cc, misc.cc: new DECL tests and defines.
	* bookmark.cc, bookmark.h, commands.cc, CmdExec.h: move lftp_bookmarks.
	* ftpclass.cc: accept CLNT with argument in FEAT reply.
	* url.cc: (bm:) new URL scheme to refer to bookmarked URLs.
