@@ -1,3 +1,7 @@
+2004-07-21  Alexander V. Lukyanov <lav@yars.free.net>
+
+	* ftpclass.cc: don't send FEAT to proxy before login.
+
 2004-07-13  Alexander V. Lukyanov <lav@yars.free.net>
 
 	* SFtp.cc, SFtp.h: implemented slow start; handle passphrase prompt;
